[gd_scene load_steps=2 format=3 uid="uid://cel4cu6gapfm0"]

[ext_resource type="Script" uid="uid://crw8itlqugtqd" path="res://ui/components/compact_quest_card.gd" id="1_0xqxq"]

[node name="CompactQuestCard" type="Button"]
custom_minimum_size = Vector2(300, 120)
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
script = ExtResource("1_0xqxq")

[node name="InnerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InnerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="HeaderContainer" type="HBoxContainer" parent="InnerPanel/VBoxContainer"]
layout_mode = 2

[node name="RankLabel" type="Label" parent="InnerPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "[F]"

[node name="TitleLabel" type="Label" parent="InnerPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Quest Name"

[node name="MetricsContainer" type="HBoxContainer" parent="InnerPanel/VBoxContainer"]
layout_mode = 2

[node name="DurationLabel" type="Label" parent="InnerPanel/VBoxContainer/MetricsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "‚è±Ô∏è 00:00"

[node name="PartyLabel" type="Label" parent="InnerPanel/VBoxContainer/MetricsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "üë• 1-4"

[node name="SuccessLabel" type="Label" parent="InnerPanel/VBoxContainer/MetricsContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 11
text = "üéØ --"

[node name="Assigned Members" type="Label" parent="InnerPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Members Not Yet Assigned"

[node name="RequirementsLabel" type="Label" parent="InnerPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_font_sizes/font_size = 10
text = "Requirements"
autowrap_mode = 2

[node name="RewardsLabel" type="Label" parent="InnerPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Rewards"

[connection signal="pressed" from="." to="." method="_on_pressed"]
